[tool.poetry]
name = "linthell"
version = "1.0.4"
description = "Universal flakehell replacement for almost any linter you like"
authors = ["Alexander Bespalov <discrimy.off@gmail.com>"]
readme = "README.md"
homepage = "https://gitea.discrimy.ru/discrimy/linthell"
repository = "https://gitea.discrimy.ru/discrimy/linthell"

[tool.poetry.scripts]
linthell = "linthell:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
typing-extensions = "^4.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pydocstyle = "^6.1.1"
toml = "^0.10.2"

[tool.poetry.group.pre-commit.dependencies]
pre-commit = {version = "^2.21.0"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 79

[tool.pydocstyle]
ignore = ["D100", "D104", "D213"]
